# try-pytest-api

./: pyproject.toml
core/clients/api/: api_client.py
core/clients/api/base/: base_api_client.py  middlewares.py
core/models/: base_model.py  comment.py  post.py
tests/: conftest.py  test_posts.py
